# ultima-sdk-python

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Quick_Start.md  README.md  cliloc_pol.csv  pyproject.toml  pytest.ini  requirements.txt  setup.py  ultima-sdk-python.code-workspace
.github/: copilot-instructions.md
examples/: README.md  __init__.py  _common.py  all_in_one_example.py  animation_edit_example.py  animations_example.py  animations_gif_example.py  art_example.py  binary_extensions_example.py  client_example.py  cliloc_example.py  def_files_example.py  equipconv_example.py  examle1.py  exceptions_example.py  file_index_example.py  files_example.py  gumps_example.py  hues_example.py  light_example.py  map_example.py  multis_example.py  package_init_example.py  radar_col_example.py  render_tile_example.py  rendering_example.py  simple_radar_example.py  skill_groups_example.py  skills_example.py  sound_example.py  string_list_example.py  textures_example.py  tile_matrix_example.py  tiledata_example.py  uop_example.py  verdata_example.py  verdata_ids_example.py
scripts/: dev_install.ps1  dev_install.sh
tests/: __init__.py  test_animation_edit.py  test_animation_gif_export.py  test_animations_decode.py  test_art.py  test_art_decode.py  test_art_equipconv.py  test_basic.py  test_client.py  test_client_location.py  test_cliloc.py  test_cliloc_cli.py  test_def_files.py  test_equipconv_def.py  test_exceptions.py  test_fileindex.py  test_files.py  test_gumps_decode.py  test_light_decode.py  (+16 more)
(+51 files in other folders)
