[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultima-sdk-python"
version = "1.1.4"
description = "A 1:1 Python conversion of the C# Ultima SDK"
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "UltimaWorks" } ]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Games/Entertainment",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = ["pillow>=10.0.0"]

[project.urls]
Homepage = "https://github.com/UltimaWorks/ultima-sdk-python"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*", "docs*"]


